# myEducationFastAPI

./: .gitignore  pyproject.toml
